{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 70,
  "lineage": "d8304a6a-2d74-62ad-87c2-5c6f6ba9674c",
  "resources": [
    {
      "module": "module.alb_eu_central",
      "mode": "data",
      "type": "aws_instance",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-01592cddfc61fba84",
            "arn": "arn:aws:ec2:eu-central-1:452459711137:instance/i-0020734359e379570",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0020734359e379570",
            "instance_id": "i-0020734359e379570",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "launch_time": "2025-08-15T14:37:30Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-05ef4e8266fa3d999",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-45-115.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.115",
            "public_dns": "ec2-18-197-86-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.86.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a07d27c53cc93b0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-eu-central-1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b66dd3e9cde631e9",
            "tags": {
              "Name": "web-eu-central-1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055156b9c74a944e5"
            ]
          }
        }
      ]
    },
    {
      "module": "module.alb_eu_central",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:loadbalancer/app/my-alb/7975e367ad8d46da",
            "arn_suffix": "app/my-alb/7975e367ad8d46da",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1041467304.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:loadbalancer/app/my-alb/7975e367ad8d46da",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a24f1e48de2ee6e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a0e0bf9494331581"
              },
              {
                "subnet_id": "subnet-0b66dd3e9cde631e9"
              }
            ],
            "subnets": [
              "subnet-0a0e0bf9494331581",
              "subnet-0b66dd3e9cde631e9"
            ],
            "vpc_id": "vpc-02f0936df25b47066",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.alb_eu_central.aws_security_group.alb_sg",
            "module.alb_eu_central.data.aws_instance.target",
            "module.alb_eu_central.data.aws_subnets.selected",
            "module.ec2_eu_central.aws_instance.web",
            "module.ec2_eu_central.aws_security_group.ec2_sg",
            "module.ec2_eu_central.data.aws_ami.amazon_linux",
            "module.ec2_eu_central.data.aws_subnet.selected",
            "module.ec2_eu_central.data.aws_subnets.default",
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_eu_central",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:listener/app/my-alb/7975e367ad8d46da/2e7179c3774a2110",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:targetgroup/my-alb-tg/b2dd522f4f7a20de",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:listener/app/my-alb/7975e367ad8d46da/2e7179c3774a2110",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:loadbalancer/app/my-alb/7975e367ad8d46da",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_eu_central.aws_lb.this",
            "module.alb_eu_central.aws_lb_target_group.tg",
            "module.alb_eu_central.aws_security_group.alb_sg",
            "module.alb_eu_central.data.aws_instance.target",
            "module.alb_eu_central.data.aws_subnets.selected",
            "module.ec2_eu_central.aws_instance.web",
            "module.ec2_eu_central.aws_security_group.ec2_sg",
            "module.ec2_eu_central.data.aws_ami.amazon_linux",
            "module.ec2_eu_central.data.aws_subnet.selected",
            "module.ec2_eu_central.data.aws_subnets.default",
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_eu_central",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:targetgroup/my-alb-tg/b2dd522f4f7a20de",
            "arn_suffix": "targetgroup/my-alb-tg/b2dd522f4f7a20de",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:targetgroup/my-alb-tg/b2dd522f4f7a20de",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f0936df25b47066"
          },
          "dependencies": [
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_eu_central",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:targetgroup/my-alb-tg/b2dd522f4f7a20de-20250815143745997800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452459711137:targetgroup/my-alb-tg/b2dd522f4f7a20de",
            "target_id": "i-0020734359e379570"
          },
          "dependencies": [
            "module.alb_eu_central.aws_lb_target_group.tg",
            "module.ec2_eu_central.aws_instance.web",
            "module.ec2_eu_central.aws_security_group.ec2_sg",
            "module.ec2_eu_central.data.aws_ami.amazon_linux",
            "module.ec2_eu_central.data.aws_subnet.selected",
            "module.ec2_eu_central.data.aws_subnets.default",
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_eu_central",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:security-group/sg-0a24f1e48de2ee6e5",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a24f1e48de2ee6e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "452459711137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f0936df25b47066"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_ap_south",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap_south",
      "instances": [
        {
          "index_key": "subnet-0739e8a546942c1fe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:452459711137:subnet/subnet-0739e8a546942c1fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739e8a546942c1fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-044429e1caf3c24af"
          }
        },
        {
          "index_key": "subnet-0aa9afc40e0967b6b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:452459711137:subnet/subnet-0aa9afc40e0967b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa9afc40e0967b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-044429e1caf3c24af"
          }
        },
        {
          "index_key": "subnet-0e8137f53c59d24e9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:452459711137:subnet/subnet-0e8137f53c59d24e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8137f53c59d24e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-044429e1caf3c24af"
          }
        }
      ]
    },
    {
      "module": "module.ec2_ap_south",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap_south",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:452459711137:vpc/vpc-044429e1caf3c24af",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cab794e8b4109195",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-07818b2c8223c9a3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044429e1caf3c24af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e4e13bb5763c738",
            "owner_id": "452459711137"
          }
        }
      ]
    },
    {
      "module": "module.ec2_ap_south",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap_south",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0059e0da390478151",
            "arn": "arn:aws:ec2:ap-south-1:452459711137:instance/i-034b4c66b6d454c02",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034b4c66b6d454c02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d1c835e5173f898",
            "private_dns": "ip-172-31-14-16.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.16",
            "public_dns": "ec2-3-109-2-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.2.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0114a961f32703eb2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-ap-south-1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa9afc40e0967b6b",
            "tags": {
              "Name": "web-ap-south-1b"
            },
            "tags_all": {
              "Name": "web-ap-south-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0720e1fb1faebeb57"
            ]
          },
          "dependencies": [
            "module.ec2_ap_south.aws_security_group.ec2_sg",
            "module.ec2_ap_south.data.aws_ami.amazon_linux",
            "module.ec2_ap_south.data.aws_subnet.selected",
            "module.ec2_ap_south.data.aws_subnets.default",
            "module.ec2_ap_south.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_ap_south",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap_south",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:452459711137:security-group/sg-0720e1fb1faebeb57",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0720e1fb1faebeb57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg-ap-south-1b",
            "name_prefix": "",
            "owner_id": "452459711137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044429e1caf3c24af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_ap_south.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_eu_central",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "index_key": "subnet-0a0e0bf9494331581",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:subnet/subnet-0a0e0bf9494331581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e0bf9494331581",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-02f0936df25b47066"
          }
        },
        {
          "index_key": "subnet-0afe41b3c582601fc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:subnet/subnet-0afe41b3c582601fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afe41b3c582601fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-02f0936df25b47066"
          }
        },
        {
          "index_key": "subnet-0b66dd3e9cde631e9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:subnet/subnet-0b66dd3e9cde631e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b66dd3e9cde631e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-02f0936df25b47066"
          }
        }
      ]
    },
    {
      "module": "module.ec2_eu_central",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:vpc/vpc-02f0936df25b47066",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05f1060800d11f11f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ab10b4b5b4021e9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f0936df25b47066",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8f4ce90e0eba526",
            "owner_id": "452459711137"
          }
        }
      ]
    },
    {
      "module": "module.ec2_eu_central",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01592cddfc61fba84",
            "arn": "arn:aws:ec2:eu-central-1:452459711137:instance/i-0020734359e379570",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0020734359e379570",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ef4e8266fa3d999",
            "private_dns": "ip-172-31-45-115.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.115",
            "public_dns": "ec2-18-197-86-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.86.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a07d27c53cc93b0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-eu-central-1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b66dd3e9cde631e9",
            "tags": {
              "Name": "web-eu-central-1b"
            },
            "tags_all": {
              "Name": "web-eu-central-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-055156b9c74a944e5"
            ]
          },
          "dependencies": [
            "module.ec2_eu_central.aws_security_group.ec2_sg",
            "module.ec2_eu_central.data.aws_ami.amazon_linux",
            "module.ec2_eu_central.data.aws_subnet.selected",
            "module.ec2_eu_central.data.aws_subnets.default",
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_eu_central",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452459711137:security-group/sg-055156b9c74a944e5",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055156b9c74a944e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg-eu-central-1b",
            "name_prefix": "",
            "owner_id": "452459711137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f0936df25b47066"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_eu_central.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_east",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "index_key": "subnet-045e62b9dc961289c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-045e62b9dc961289c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045e62b9dc961289c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        },
        {
          "index_key": "subnet-04a36798ca830ebba",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-04a36798ca830ebba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a36798ca830ebba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        },
        {
          "index_key": "subnet-07c9055daa798af45",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-07c9055daa798af45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9055daa798af45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        },
        {
          "index_key": "subnet-085c2af1c869eefc3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-085c2af1c869eefc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c2af1c869eefc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        },
        {
          "index_key": "subnet-0b4f39abc71b5c987",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-0b4f39abc71b5c987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f39abc71b5c987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        },
        {
          "index_key": "subnet-0f8659c8d0289b052",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:subnet/subnet-0f8659c8d0289b052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8659c8d0289b052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452459711137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_east",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:vpc/vpc-06ae3e0bd22ce2464",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04acfdd6273b4d30b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00b82c400f8135e7e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ae3e0bd22ce2464",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba092768f486512f",
            "owner_id": "452459711137",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_east",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c86481225d3c51",
            "arn": "arn:aws:ec2:us-east-1:452459711137:instance/i-0281c7e60a6b1502e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0281c7e60a6b1502e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006355b1d02fbb0f7",
            "private_dns": "ip-172-31-33-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.30",
            "public_dns": "ec2-34-201-169-78.compute-1.amazonaws.com",
            "public_ip": "34.201.169.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02273163831c44be9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-us-east-1d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8659c8d0289b052",
            "tags": {
              "Name": "web-us-east-1d"
            },
            "tags_all": {
              "Name": "web-us-east-1d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060b44d258756fe30"
            ]
          },
          "dependencies": [
            "module.ec2_us_east.aws_security_group.ec2_sg",
            "module.ec2_us_east.data.aws_ami.amazon_linux",
            "module.ec2_us_east.data.aws_subnet.selected",
            "module.ec2_us_east.data.aws_subnets.default",
            "module.ec2_us_east.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_east",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452459711137:security-group/sg-060b44d258756fe30",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060b44d258756fe30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg-us-east-1d",
            "name_prefix": "",
            "owner_id": "452459711137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ae3e0bd22ce2464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_us_east.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}